--- a/admin/src/index.css
+++ b/admin/src/index.css
@@ -1,3 +1,6 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+body {
+  margin: 0;
+  font-family: "Poppins";
+  background-color: #f6f6f6;
+  height: 100vh;
+}
